<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/title_activity_main"
        android:textAlignment="center"
        android:textColor="#900C3F"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:text="@string/cases"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView_allcases"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textColor="#FF2700"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/deaths"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_allcases"
        app:layout_constraintStart_toStartOf="@+id/textView_allcases"
        app:layout_constraintTop_toBottomOf="@+id/textView_allcases" />

    <TextView
        android:id="@+id/textView_alldeaths"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textColor="#FF2700"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/recovered"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_alldeaths"
        app:layout_constraintStart_toStartOf="@+id/textView_alldeaths"
        app:layout_constraintTop_toBottomOf="@+id/textView_alldeaths" />

    <TextView
        android:id="@+id/textView_allrecovered"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textColor="#2DDA0F"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView_show_by_country"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:onClick="show_detail_by_country"
        android:text="@string/display_detail_country"
        android:textAlignment="center"
        android:textColor="#FF2700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_allrecovered"
        app:layout_constraintStart_toStartOf="@+id/textView_allrecovered"
        app:layout_constraintTop_toBottomOf="@+id/textView_allrecovered"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView_show_by_continent"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="show_detail_by_continent"
        android:text="@string/display_detail_continent"
        android:textAlignment="center"
        android:textColor="#FF2700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_show_by_country"
        app:layout_constraintStart_toStartOf="@+id/textView_show_by_country"
        app:layout_constraintTop_toBottomOf="@+id/textView_show_by_country"
        android:focusable="true" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:onClick="exit"
        android:src="@drawable/ic_baseline_exit_to_app_24"
        app:backgroundTint="#68AD60"
        app:elevation="20dp"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_show_by_continent"
        app:maxImageSize="75dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>