<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".FourthActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#900C3F"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="50sp"
                android:text="@string/compare_two_country" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:text="@string/country" />

            <TextView
                android:id="@+id/textView_last_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="serif"
                android:text="@string/last_update"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_country_name_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textView_country_name_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_country_flag_one"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView_country_flag_two"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:text="@string/cases" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_country_one_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textView_country_two_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:text="@string/deaths" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView_country_one_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textView_country_two_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:text="@string/recovered" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_country_one_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textView_country_two_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />
            </LinearLayout>
            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:text="@string/critical_cases" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_country_one_critical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textView_country_two_critical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:text="@string/tests" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_country_one_tests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textView_country_two_tests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:text="@string/population" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_country_one_population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textView_country_two_population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:text="@string/empty" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_action_button_Back_main_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:onClick="back_to_previous_activity"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    app:backgroundTint="#68AD60"
                    app:elevation="20dp"
                    app:fabSize="normal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:maxImageSize="75dp"
                    tools:ignore="MissingConstraints"
                    android:contentDescription="@string/todo" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_action_button_quit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:onClick="exit"
                    android:layout_marginStart="225dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/ic_baseline_exit_to_app_24"
                    app:backgroundTint="#68AD60"
                    app:elevation="20dp"
                    app:fabSize="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:maxImageSize="75dp"
                    tools:ignore="MissingConstraints"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/display_button"
                    android:layout_marginBottom="20dp"
                    android:onClick="save"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>